Minor fixes to prevent stats to overflow to two lines in rec diag

--- a/scss/shadowRoot/dialog.scss
+++ b/scss/shadowRoot/dialog.scss
@@ -378,7 +378,7 @@ $right-pane-width: 500px;
 					margin-right: 15px;
 					color: #444;
 
-					span {
+					.type {
 						text-transform: capitalize;
 					}
 
